# Rubicom

./: README.md
Ichthus_App/app/: build.gradle  local.properties
Ichthus_App/app/gradle/wrapper/: gradle-wrapper.properties
Ichthus_App/app/src/androidTest/java/com/rubicom/vcf/ichthus/: ExampleInstrumentedTest.java
Ichthus_App/app/src/main/: AndroidManifest.xml
Ichthus_App/app/src/main/java/com/rubicom/vcf/ichthus/: InetSocket.java  MainActivity.java  VCFAgent.java  VCFServer.java  VCF_msg.java
Ichthus_App/app/src/main/proto/: umsg.proto
Ichthus_App/app/src/main/res/layout/: activity_main.xml
Ichthus_App/app/src/main/res/values/: strings.xml
Ichthus_App/app/src/test/java/com/rubicom/vcf/ichthus/: ExampleUnitTest.java
Ichthus_App/gradle/wrapper/: gradle-wrapper.properties
Ichthus_controller_command_regex/: CMakeLists.txt  package.xml
Ichthus_controller_command_regex/cfg/: command_list.yaml
Ichthus_controller_command_regex/include/ichthus_controller/: ichthus_controller.h
Ichthus_controller_command_regex/launch/: ichthus_controller.launch
Ichthus_controller_command_regex/src/: ichthus_controller.cpp  ichthus_controller_core.cpp  ichthus_controller_node.cpp
Ichthus_controller_gui/: ichthus_controller_wxpython.py
Ichthus_controller_python/: CMakeLists.txt  package.xml
Ichthus_controller_python/cfg/: command_list.yaml
Ichthus_controller_python/launch/: ichthus_controller_python.launch
Ichthus_controller_python/scripts/: .ichthus_controller_python.py.swp  ichthus_controller_python.py  ichthus_controller_python_orig.py
Ichthus_controller_srv/: CMakeLists.txt  package.xml
Ichthus_controller_srv/cfg/: ichthus_commands.yaml  ichthus_i30.yaml
Ichthus_controller_srv/include/ichthus_controller/: ichthus_controller.h  task_graph.h
Ichthus_controller_srv/launch/: ichthus_controller.launch
Ichthus_controller_srv/src/: ichthus_controller_client.cpp  ichthus_controller_server_core.cpp
ichthus_controller/: CMakeLists.txt  package.xml
ichthus_controller/cfg/: ichthus_commands.yaml  ichthus_i30.yaml  ichthus_i30.yaml.taeho
ichthus_controller/include/ichthus_controller/: ichthus_controller.h
ichthus_controller/launch/: ichthus_controller.launch
ichthus_controller/src/: controllers.cpp  ethercat.cpp  ichthus_controller_client.cpp  ichthus_controller_server_core.cpp
ichthus_controller/src/vcsd/: Controller_HA.cpp
ichthus_error_calculator/: CMakeLists.txt  package.xml
ichthus_error_calculator/include/ichthus_error_calculator/: ichthus_error_calculator.h
ichthus_error_calculator/src/: ichthus_error_calculator_core.cpp  ichthus_error_calculator_node.cpp
