<?xml version="1.0"?>
<package format="2">
  <name>ichthus_controller_python version</name>
  <version>0.1.0</version>
  <description>The ichthus controller package</description>
  <maintainer email="kim.kanghee@gmail.com">Kanghee Kim</maintainer>
  <license>Apache 2</license>

  <!--<buildtool_depend>autoware_build_flags</buildtool_depend>-->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>  
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <export></export>    <!-- additional information can be placed here -->
</package>

